--- a/.github/workflows/vpnBuild.yml
+++ b/.github/workflows/vpnBuild.yml
@@ -23,6 +23,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 21
+          
+      # To grant gradlew permission 
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
 
       # Download and cache Gradle dependencies
       - name: Download dependencies
