--- a/local.properties
+++ b/local.properties
@@ -1,4 +1,5 @@
-sdk.dir=/content/drive/MyDrive/Android/Sdk
+# Environment variable set by android-actions/setup-android@v2
+sdk.dir=$ANDROID_SDK_ROOT  
 mask.buildMode=release
 mask.versionName=1.0.0
 mask.versionCode=1
