--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'com.android.application'
-    id 'kotlin-android'
 }
 
 def localProperties = new Properties()
@@ -20,7 +19,7 @@ android {
 
     defaultConfig {
         // Specify your unique Application ID.
-        applicationId "com.natinc.nat.naijatrans"
+        applicationId "com.example.mask"
         minSdkVersion 21 // Update according to your requirements
         targetSdkVersion 34
         versionCode maskVersionCode.toInteger()
@@ -65,7 +64,7 @@ android {
     }
 
     sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
+        // main.java.srcDirs += 'src/main/kotlin'
     }
 
     lintOptions {
@@ -74,8 +73,10 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.0.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.0.2'
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
