--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,12 +59,9 @@ android {
         targetCompatibility = JavaVersion.VERSION_21
     }
 
-    kotlinOptions {
-        jvmTarget = '21'
-    }
 
     sourceSets {
-        // main.java.srcDirs += 'src/main/kotlin'
+         main.java.srcDirs += 'src/main/java'
     }
 
     lintOptions {
