--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.AppCompat.NoActionBar">
         
         <activity android:name=".MainActivity"
+                  android:launchMode="singleTop"
+                  android:background="@drawable/launch_background"
+        
                   android:exported="true">
             
             <intent-filter>
