--- a/.github/workflows/vpnBuild.yml
+++ b/.github/workflows/vpnBuild.yml
@@ -1,6 +1,5 @@
 name: Android CI
 
-# Triggers the workflow on push or pull request to the main branch
 on:
   push:
     branches:
@@ -14,28 +13,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repository's code
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
-      # Set up JDK 11 (Android requires JDK 8 or above)
-      - name: Set up JDK 21
-        uses: actions/setup-java@v1
-        with:
-          java-version: 21
-          
-      # To grant gradlew permission 
-      - name: Grant execute permission for gradlew
-        run: chmod +x ./gradlew
+    - name: Set up JDK 21
+      uses: actions/setup-java@v2
+      with:
+        distribution: 'zulu'
+        java-version: '21'
 
-      # Download and cache Gradle dependencies
-      - name: Download dependencies
-        run: ./gradlew build --stacktrace
+    - name: Install Android SDK
+      uses: android-actions/setup-android@v2
+      with:
+        api-level: 34
+        build-tools: 34.0.0
 
-      # Build the APK
-      - name: Build APK
-        run: ./gradlew assembleDebug --stacktrace
+    - name: Append sdk.dir to local.properties
+      run: |
+        echo "sdk.dir=$ANDROID_HOME" >> local.properties
+        cat local.properties  # Output the file contents for debugging
 
+    - name: Build with Gradle
+      run: ./gradlew build --stacktrace
+      
       # Upload the built APK as an artifact
       - name: Upload APK
         uses: actions/upload-artifact@v4
