--- a/.github/workflows/vpnBuild.yml
+++ b/.github/workflows/vpnBuild.yml
@@ -30,8 +30,8 @@ jobs:
     - name: Append sdk.dir to local.properties
       run: |
         echo "sdk.dir=$ANDROID_HOME" >> local.properties
-        cat local.properties  # Output the file contents for debugging
-
+        cat local.properties  
+        
     - name: Build with Gradle
       run: ./gradlew build --stacktrace
       
