--- a/.github/workflows/vpnBuild.yml
+++ b/.github/workflows/vpnBuild.yml
@@ -15,29 +15,30 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up JDK 21
+    - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
         distribution: 'zulu'
-        java-version: '21'
+        java-version: '11'
 
     - name: Install Android SDK
       uses: android-actions/setup-android@v2
       with:
-        api-level: 34
-        build-tools: 34.0.0
+        api-level: 31
+        build-tools: 31.0.0
 
     - name: Append sdk.dir to local.properties
       run: |
         echo "sdk.dir=$ANDROID_HOME" >> local.properties
-        cat local.properties
-        
+        cat local.properties  # Output the file contents for debugging
+
     - name: Build with Gradle
       run: ./gradlew build --stacktrace
+
       
-      # Upload the built APK as an artifact
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-debug.apk
-          path: app/build/outputs/apk/debug/app-debug.apk
+    # Upload the built APK as an artifact
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: app-debug.apk
+        path: app/build/outputs/apk/debug/app-debug.apk
