--- a/.github/workflows/vpnBuild.yml
+++ b/.github/workflows/vpnBuild.yml
@@ -38,8 +38,11 @@ jobs:
       run: chmod +x ./gradlew
       
     - name: Decode keystore
-      run: echo "${{ secrets.KEYSTORE_BASE64}}" | base64 --decode > release-key.jks
-
+      run: echo "${{ secrets.KEYSTORE_BASE64}}" | base64 --decode > app/release-key.jks
+    
+    - name: List files
+      run: ls -al
+  
     - name: Build with Gradle
       env:
         KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }} # Add your keystore password secret
