--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         </activity>
 
         <service
-            android:name=".MaskService"
+            android:name="com.example.service.MaskService"
             android:permission="android.permission.BIND_VPN_SERVICE"
             android:exported="true">
             
