--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,8 @@ android {
 
     signingConfigs {
         release {
-            storeFile file("release-key.jks") // Update the path to match where the file is placed
-       
+            storeFile file(System.getenv("KEYSTORE_FILE"))
+           
             storePassword System.getenv("KEYSTORE_PASSWORD")
             keyAlias System.getenv("KEY_ALIAS")
             keyPassword System.getenv("KEY_PASSWORD")
