--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VPN" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    
+    <uses-permission android:name="android.permission.BIND_VPN_SERVICE" />
+
 
     <application
         android:allowBackup="true"
@@ -25,7 +28,7 @@
         </activity>
 
         <service
-            android:name="com.example.service.MaskService"
+            android:name=".service.MaskService"
             android:permission="android.permission.BIND_VPN_SERVICE"
             android:exported="true">
             
