--- a/.github/workflows/vpnBuild.yml
+++ b/.github/workflows/vpnBuild.yml
@@ -67,7 +67,7 @@ jobs:
     - name: Upload log file as an artifact
       uses: actions/upload-artifact@v3
       with:
-        name: app.log
-        path: src/main/java/com/example/log/app.log
+        name: app-log
+        path: app/build/logs/app.log
         retention-days: 5  # Optional: Set how long to keep the artifact
           
