--- a/.github/workflows/vpnBuild.yml
+++ b/.github/workflows/vpnBuild.yml
@@ -63,7 +63,7 @@ jobs:
         path: app/build/outputs/apk/debug/app-debug.apk
     
     - name: List files in workspace
-      run: ls -R  # This will list all files in the current directory and subdirectories
+      run: ls app/build/reports  # This will list all files in the current directory and subdirectories
   
         
         
