--- a/.github/workflows/vpnBuild.yml
+++ b/.github/workflows/vpnBuild.yml
@@ -63,22 +63,19 @@ jobs:
         path: app/build/outputs/apk/debug/app-debug.apk
     
     - name: List files in workspace
-      run: ls app/build/reports  # This will list all files in the current directory and subdirectories
+      run: ls app/build/  # This will list all files in the current directory and subdirectories
   
         
         
     - name: Upload log file as an artifact
       uses: actions/upload-artifact@v3
       with:
-        name: app-log
-        path: app/build/reports/app.log
+        name: app.log
+        path: app/src/main/java/com/example/log/app.log
         retention-days: 5  # Optional: Set how long to keep the artifact
-          
     
-    - name: Upload lint log file as an artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: lint-results-debug.txt
-        path: app/build/reports/lint-results-debug.txt
-        retention-days: 5  # Optional: Set how long to keep the artifact
+          
+    - name: Run Application
+      run: java -jar app/build/libs/YourApp.jar
         
+   
