--- a/.github/workflows/vpnBuild.yml
+++ b/.github/workflows/vpnBuild.yml
@@ -62,6 +62,8 @@ jobs:
         name: app-debug.apk
         path: app/build/outputs/apk/debug/app-debug.apk
     
+    - name: Build JAR
+      run: ./gradlew jar
     
     - name: List files in workspace
       run: ls -R app/build/libs  # This will list all files in the current directory and subdirectories
