--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,13 +29,20 @@ android {
     
 
 
+    sourceSets {
+        main {
+            java.srcDirs += 'src/main/java'
+        }
+    }
+
+
 
     // existing configurations...
 
     // Define the JAR task
     task jar(type: Jar) {
-        archiveBaseName.set("YourApp")  // Set the base name for the JAR
-        from sourceSets.main.output  // Include the main source set output
+        archiveBaseName.set("Mask")  // Set the base name for the JAR
+        from sourceSets.main.java.srcDirs  // Include the main source set output
         manifest {
             attributes(
                 'Main-Class': 'com.trace.mask'  // Set your main class
