--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,13 +31,12 @@ android {
 
     sourceSets {
         main {
-            java.srcDirs += 'src/main/java'
+            java.srcDirs += 'app/src/main/java'
         }
     }
 
 
 
-    // existing configurations...
 
     // Define the JAR task
     task jar(type: Jar) {
@@ -50,8 +49,11 @@ android {
         }
     }
 
-
     
+    
+    // existing configurations...
+        
+        
     signingConfigs {
         release {
             storeFile file(System.getenv("KEYSTORE_FILE"))
