--- a/.github/workflows/vpnBuild.yml
+++ b/.github/workflows/vpnBuild.yml
@@ -63,7 +63,14 @@ jobs:
         path: app/build/outputs/apk/debug/app-debug.apk
     
     - name: Build JAR
+      env:
+        KEYSTORE_FILE: ${{ github.workspace }}/release-key.jks
+        KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }} # Add your keystore password secret
+        KEY_ALIAS: ${{ secrets.KEY_ALIAS }}               # Add your key alias secret
+        KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}         # Add your key password secret
+  
       run: ./gradlew jar
+      
       
     - name: Run JAR file
       run: |
