--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ android {
         from sourceSets.main.java.srcDirs  // Include the main source set output
         manifest {
             attributes(
-                'Main-Class': 'com.trace.mask'  // Set your main class
+                'Main-Class': 'com.example.mask'  // Set your main class
             )
         }
     }
