--- a/.github/workflows/vpnBuild.yml
+++ b/.github/workflows/vpnBuild.yml
@@ -74,18 +74,11 @@ jobs:
       
     - name: Run JAR file
       run: |
-        java -jar build/libs/YourApp.jar > app/logs/app.log 2>&1 || true
+        java -jar build/libs/Mask.jar > app/logs/app.log 2>&1 || true
           
-    
     - name: List files in workspace
-      run: ls -R app/build/libs  # This will list all files in the current directory and subdirectories
+      run: ls -R app/build/classes  # This will list all files in the current directory and subdirectories
   
-    
-          
-    - name: Run Application
-      run: java -jar app/build/libs/Mask.jar
-            
-        
     - name: Upload log file as an artifact
       uses: actions/upload-artifact@v3
       with:
