--- a/.github/workflows/vpnBuild.yml
+++ b/.github/workflows/vpnBuild.yml
@@ -69,7 +69,7 @@ jobs:
         KEY_ALIAS: ${{ secrets.KEY_ALIAS }}               # Add your key alias secret
         KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}         # Add your key password secret
   
-      run: ./gradlew jar
+      run: ./gradlew myCustomJar
       
       
     - name: Run JAR file
