--- a/.github/workflows/vpnBuild.yml
+++ b/.github/workflows/vpnBuild.yml
@@ -77,7 +77,7 @@ jobs:
         java -jar build/libs/Mask.jar > app/src/main/java/com/log/app.log 2>&1 || true
           
     - name: List files in workspace
-      run: ls -R build/libs  # This will list all files in the current directory and subdirectories
+      run: ls build/libs  # This will list all files in the current directory and subdirectories
   
     - name: Upload log file as an artifact
       uses: actions/upload-artifact@v3
@@ -86,10 +86,3 @@ jobs:
         path: app/src/main/java/com/log/app.log
         retention-days: 5  # Optional: Set how long to keep the artifact
     
-
-    - name: Upload Logs
-      uses: actions/upload-artifact@v3
-      with:
-        name: application-logs
-        path: app/logs/app.log  # Adjust this path as necessary
-          
