--- a/.github/workflows/vpnBuild.yml
+++ b/.github/workflows/vpnBuild.yml
@@ -75,6 +75,8 @@ jobs:
     - name: Run JAR file
       run: |
         java -jar build/libs/Mask.jar > app/src/main/java/com/log/app.log 2>&1 || true
+        ls -R app/build
+        
         
     - name: Upload log file as an artifact
       uses: actions/upload-artifact@v3
