--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
 
     sourceSets {
         main {
-            java.srcDirs += ['app/src/main/java']
+            java.srcDirs += ['src/main/java']
         }
     }
 
@@ -41,14 +41,15 @@ android {
 
     // Define the JAR task
     task myCustomJar(type: Jar) {
-        archiveBaseName.set("Mask")  // Set the base name for the JAR
-        from sourceSets.main.java.srcDirs  // Include the main source set output
+        archiveBaseName.set("Mask")
+        from android.sourceSets.main.java.srcDirs  // Include Java source set
         manifest {
             attributes(
                 'Main-Class': 'com.mask.MainActivity'  // Set your main class
             )
         }
     }
+
 
     
     
@@ -80,9 +81,7 @@ android {
     }
 
 
-    sourceSets {
-         main.java.srcDirs += 'src/main/java'
-    }
+
 
     lintOptions {
         disable 'InvalidPackage'
