--- a/.github/workflows/vpnBuild.yml
+++ b/.github/workflows/vpnBuild.yml
@@ -75,7 +75,7 @@ jobs:
     - name: Run JAR file
       run: |
         java -jar app/build/libs/Mask.jar > app/src/main/java/com/log/app.log 2>&1 || true
-        ls -R app/build/intermediates/classes/debug
+        ls -R app/build/intermediates
         
         
     - name: Upload log file as an artifact
