--- a/.github/workflows/vpnBuild.yml
+++ b/.github/workflows/vpnBuild.yml
@@ -74,8 +74,8 @@ jobs:
       
     - name: Run JAR file
       run: |
-        java -jar app/build/intermediates/compile_app_classes_jar/debug/bundleDebugClassesToCompileJar/classes.jar > app/src/main/java/com/log/app.log 2>&1 || true
-        ls -R app/build/intermediates/compile_app_classes_jar
+        java -jar app/build/libs/Mask.jar > app/src/main/java/com/log/app.log 2>&1 || true
+        ls -R app/build/libs
         
         
     - name: Upload log file as an artifact
