--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.mask"> <!-- Ensure to define your package name here -->
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.BIND_VPN_SERVICE" />
 
     <application
         android:allowBackup="true"
@@ -15,7 +17,6 @@
                   android:launchMode="singleTop"
                   android:background="@drawable/launch_background"
                   android:exported="true">
-            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -23,16 +24,14 @@
         </activity>
 
         <service
-            android:name="com.service.MaskService"
+            android:name=".service.MaskService"
             android:permission="android.permission.BIND_VPN_SERVICE"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.net.VpnService" />
+                <action android:name="START_VPN" />
+                <action android:name="STOP_VPN" />
             </intent-filter>
         </service>
-        
-        
 
-        
     </application>
 </manifest>
