--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         </activity>
 
         <service
-            android:name="com.service.MaskService"
+            android:name=".service.MaskService"
             android:permission="android.permission.BIND_VPN_SERVICE"
             android:exported="true">
             <intent-filter>
@@ -30,6 +30,7 @@
                 <action android:name="STOP_VPN" />
             </intent-filter>
         </service>
+
 
     </application>
 </manifest>
